# showcode

Bit_Count/: Bit_count.cpp  Bit_count.h  Bit_count_GTest.cpp  CMakeLists.txt  main.cpp
Buffer/: Buffer.cpp  Buffer.h  Buffer_GTest.cpp  CMakeLists.txt
Bulls_and_Cows/: Bulls_and_Cows_v3.cpp  CMakeLists.txt
Gamblers fallacy/: CMakeLists.txt  Gamblerss_fallacy.cpp  Gamblerss_fallacy.h  Gamblerss_fallacy_GTest.cpp
Girls_notes/: CMakeLists.txt  Girls_notes.cpp  Girls_notes.h  Girls_notes_GTest.cpp  main.cpp
Happy_daddies/: CMakeLists.txt  Happy_daddies.cpp  Happy_daddies.h  Happy_daddies_GTest.cpp
Jusephus_problem/: CMakeLists.txt  Flaviuss.cpp
List_in_file/: CMakeLists.txt  List_in_file.cpp  List_in_file.h  List_in_file_GTest.cpp  StringList.h
Stack/: CMakeLists.txt  Stack.cpp  Stack.h  Stack_GTest.cpp
Word_pack/: CMakeLists.txt  Word_pack.cpp  Word_pack.h  Word_pack_GTest.cpp  main.cpp
reverse_polish_notation/: CMakeLists.txt  RPN.cpp  RPN.h  RPN_GTest.cpp
two_dice/: CMakeLists.txt  main.cpp  two_dice.cpp  two_dice.h  two_dice_GTest.cpp
