# CMakeList.txt: проект CMake для Bulls_and_Cows_v3; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

project ("Bulls_and_Cows_v3")

# Добавьте источник в исполняемый файл этого проекта.
add_executable (Bulls_and_Cows_v3 "Bulls_and_Cows_v3.cpp")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
